--- a/_teaching/bio-i-2024-05-15.md
+++ b/_teaching/bio-i-2024-05-15.md
@@ -2,17 +2,26 @@
 title: "Biology I"
 collection: teaching
 type: "Undergraduate Lab"
-permalink: /teaching/bio-i-2024-05-15
+permalink: /teaching/bio-i
 venue: "Mississippi State University, Department of Biological Sciences"
 date: 2024-05-15
 location: "Starkville, MS, USA"
 ---
 
-## Instructor of Record: Dr. Nicole Welch
-* Semesters taught:
-  * Spring 2024
+### Syllabus
+* Measurements and Microscopes
+* The Cell
+* Diffusion and Osmosis
+* Enzymes
+* Respiration
+* Photosynthesis
+* Mitosis and Meiosis
+* Genetics
+* Evolution
+* Ecology
+* Population Growth
  
-## Instructor of Record: Dr. Victoria McCurdy
-* Semesters taught:
+### Semesters taught:
+  * Spring 2024
   * Fall 2023
 
